[package]
name = "todo-rust"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "todo-rust"
path = "main.rs"

[dependencies]
actix-web  = "4"
actix-cors = "0.7"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
tokio      = { version = "1",    features = ["full"] }
